# template-solana-anchor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Tiltfile  biome.jsonc  knip.config.ts  package.json
.github/workflows/: release.yml  test.yml
docs/: DEPLOYMENT.md
programs/{{program-name}}/: Cargo.toml
programs/{{program-name}}/src/: errors.rs  lib.rs
programs/{{program-name}}/src/instructions/: initialize.rs
programs/{{program-name}}/src/state/: config.rs
scripts/: deploy.sh  init-config.ts  pre-deploy-check.sh  start-validator.sh
